# text-video

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  webui.bat  webui.sh
app/: asgi.py  router.py
app/config/: __init__.py  config.py
app/controller/: ping.py  video.py
app/manager/: base_manager.py  memory_manager.py
app/model/: constant.py  exception.py  schema.py
app/service/: audio.py  state.py  task.py  video.py
app/util/: util.py
assets/: voice-list.txt
resource/public/: index.html
webui/: main.py
