[project]
name = "text-video"
version = "1.0.0"
description = "✨ 文字视频"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.3",
    "fastapi>=0.118.0",
    "loguru>=0.7.3",
    "moviepy>=2.2.1",
    "pydantic>=2.11.9",
    "pysrt>=1.1.2",
    "toml>=0.10.2",
    "uvicorn>=0.37.0",
]
